[gd_scene load_steps=27 format=3 uid="uid://bv1tjp7uwnd2t"]

[ext_resource type="Texture2D" uid="uid://jk4esamjqqta" path="res://icon.svg" id="1_8lvey"]
[ext_resource type="Texture2D" uid="uid://buf6s6at56ar2" path="res://assets/outline_panorama_vertical_select_black_48dp.png" id="1_qknu3"]
[ext_resource type="Script" path="res://target.gd" id="2_2vx0f"]
[ext_resource type="Script" path="res://weapon.gd" id="3_4qij8"]
[ext_resource type="Script" path="res://url_button.gd" id="3_vpnul"]
[ext_resource type="Script" path="res://file_button.gd" id="4_evac5"]
[ext_resource type="AudioStream" uid="uid://c1u117i2oixcw" path="res://assets/bullet_impact_22.wav" id="4_kkmm3"]
[ext_resource type="Script" path="res://upload_button.gd" id="4_n271t"]
[ext_resource type="AudioStream" uid="uid://d287puj0u4b0g" path="res://assets/wilhelm_scream.ogg" id="4_rccg8"]
[ext_resource type="AudioStream" uid="uid://7qgqxwdwn8cp" path="res://assets/endless-robot-runner.mp3" id="5_5jr1q"]
[ext_resource type="Script" path="res://attack_sound.gd" id="5_mqyix"]
[ext_resource type="Script" path="res://reset_button.gd" id="6_qjs3n"]
[ext_resource type="Script" path="res://hit_sound.gd" id="7_0sfxg"]
[ext_resource type="Script" path="res://music.gd" id="8_jawxe"]
[ext_resource type="Script" path="res://volume_slider.gd" id="9_i0354"]
[ext_resource type="Script" path="res://instructions.gd" id="13_1kitr"]
[ext_resource type="Script" path="res://show_credits.gd" id="15_li4kt"]
[ext_resource type="Script" path="res://credits_info.gd" id="16_br7ys"]
[ext_resource type="Script" path="res://credits_dialog.gd" id="16_dneik"]
[ext_resource type="Script" path="res://file_dialog.gd" id="18_shnka"]
[ext_resource type="Script" path="res://url_dialog.gd" id="19_tuk5x"]
[ext_resource type="Script" path="res://upload_dialog.gd" id="20_1j3np"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jje8v"]
size = Vector2(128, 128)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ycbnv"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_memin"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2pto4"]

[node name="Main" type="Node"]

[node name="Background" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.501961)
offset_right = 630.0
offset_bottom = 500.0
mouse_filter = 2
texture = ExtResource("1_8lvey")
stretch_mode = 1

[node name="ShowCredits" type="Button" parent="."]
offset_left = 2.0
offset_top = 463.0
offset_right = 65.0
offset_bottom = 494.0
text = "Credits"
script = ExtResource("15_li4kt")

[node name="URLButon" type="Button" parent="."]
offset_left = 121.0
offset_top = 463.0
offset_right = 160.0
offset_bottom = 494.0
text = "URL"
script = ExtResource("3_vpnul")

[node name="UploadButton" type="Button" parent="."]
offset_left = 175.0
offset_top = 464.0
offset_right = 239.0
offset_bottom = 495.0
text = "Upload"
script = ExtResource("4_n271t")

[node name="FileButton" type="Button" parent="."]
offset_left = 75.0
offset_top = 463.0
offset_right = 110.0
offset_bottom = 494.0
text = "File"
script = ExtResource("4_evac5")

[node name="ResetButton" type="Button" parent="."]
offset_left = 8.0
offset_top = 353.0
offset_right = 59.0
offset_bottom = 384.0
text = "Reset"
script = ExtResource("6_qjs3n")

[node name="Weapon" type="Sprite2D" parent="."]
position = Vector2(295, 455)
texture = ExtResource("1_qknu3")
script = ExtResource("3_4qij8")

[node name="AttackSound" type="AudioStreamPlayer2D" parent="Weapon"]
stream = ExtResource("4_kkmm3")
script = ExtResource("5_mqyix")

[node name="ShowInstructions" type="Timer" parent="Weapon"]

[node name="Target" type="CharacterBody2D" parent="."]
visible = false
script = ExtResource("2_2vx0f")

[node name="DefaultSprite" type="Sprite2D" parent="Target"]
texture = ExtResource("1_8lvey")

[node name="CurrentSprite" type="Sprite2D" parent="Target"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target"]
shape = SubResource("RectangleShape2D_jje8v")

[node name="HitSound" type="AudioStreamPlayer2D" parent="Target"]
stream = ExtResource("4_rccg8")
script = ExtResource("7_0sfxg")

[node name="LeftLimit" type="Marker2D" parent="Target"]
position = Vector2(50, 100)

[node name="RightLimit" type="Marker2D" parent="Target"]
position = Vector2(550, 100)

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_5jr1q")
mix_target = 1
script = ExtResource("8_jawxe")

[node name="Instructions" type="Label" parent="."]
offset_left = 325.0
offset_top = 441.0
offset_right = 604.0
offset_bottom = 467.0
scale = Vector2(0.92, 1)
text = "<--- CLICK HERE OR PRESS SPACEBAR"
script = ExtResource("13_1kitr")

[node name="VolumeControl" type="Panel" parent="."]
custom_minimum_size = Vector2(200, 50)
offset_left = 3.0
offset_top = 404.0
offset_right = 203.0
offset_bottom = 454.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ycbnv")

[node name="Label" type="Label" parent="VolumeControl"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Volume"

[node name="HSlider" type="HSlider" parent="VolumeControl"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 60.0
script = ExtResource("9_i0354")

[node name="CreditsDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
initial_position = 2
size = Vector2i(311, 310)
script = ExtResource("16_dneik")

[node name="CreditsInfo" type="RichTextLabel" parent="CreditsDialog"]
clip_contents = false
offset_left = 8.0
offset_top = 8.0
offset_right = 303.0
offset_bottom = 261.0
bbcode_enabled = true
text = "AVENGER - by DaveTheCoder

Export: YYYY-MM-DD HH:MM:SS +9999

Godot Engine: M.mm.pp.status (build)

Background music:
\"Endless Robot Runner\"
by Eric Matyas
www.soundimage.org	"
fit_content = true
scroll_active = false
autowrap_mode = 2
script = ExtResource("16_br7ys")

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
initial_position = 1
size = Vector2i(630, 500)
script = ExtResource("18_shnka")

[node name="UrlDialog" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
offset_right = 630.0
offset_bottom = 500.0
theme_override_styles/panel = SubResource("StyleBoxFlat_memin")
script = ExtResource("19_tuk5x")

[node name="Url" type="LineEdit" parent="UrlDialog"]
layout_mode = 0
offset_right = 500.0
offset_bottom = 31.0
text = "https://www.example.com/image.png"
virtual_keyboard_type = 7
clear_button_enabled = true

[node name="UrlBtn" type="Button" parent="UrlDialog"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -102.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Fetch URL"
alignment = 0

[node name="ImagePreviewLabel" type="Label" parent="UrlDialog"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 125.0
offset_right = 218.0
offset_bottom = 125.0
grow_vertical = 2
size_flags_horizontal = 0
text = "Image Preview:"
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="UrlDialog"]
layout_mode = 0
offset_left = 251.0
offset_top = 61.0
offset_right = 379.0
offset_bottom = 189.0
color = Color(0, 0, 0, 1)

[node name="ImagePreview" type="Sprite2D" parent="UrlDialog"]
position = Vector2(315, 125)

[node name="Message" type="Label" parent="UrlDialog"]
layout_mode = 0
offset_top = 200.0
offset_right = 147.0
offset_bottom = 226.0
text = "Message goes here"

[node name="CancelBtn" type="Button" parent="UrlDialog"]
layout_mode = 0
offset_left = 200.0
offset_top = 250.0
offset_right = 260.0
offset_bottom = 281.0
text = "Cancel	"

[node name="OkBtn" type="Button" parent="UrlDialog"]
layout_mode = 0
offset_left = 300.0
offset_top = 250.0
offset_right = 472.0
offset_bottom = 281.0
text = "Change Target Image"

[node name="UploadDialog" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
offset_right = 630.0
offset_bottom = 500.0
theme_override_styles/panel = SubResource("StyleBoxFlat_2pto4")
script = ExtResource("20_1j3np")

[node name="UploadButton" type="Button" parent="UploadDialog"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -370.0
offset_top = 4.0
offset_right = -254.0
offset_bottom = 35.0
grow_horizontal = 0
text = "Upload Image"
alignment = 0

[node name="ImagePreviewLabel" type="Label" parent="UploadDialog"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 125.0
offset_right = 218.0
offset_bottom = 125.0
grow_vertical = 2
size_flags_horizontal = 0
text = "Image Preview:"
metadata/_edit_use_anchors_ = true

[node name="PreviewFrame" type="ColorRect" parent="UploadDialog"]
layout_mode = 0
offset_left = 251.0
offset_top = 61.0
offset_right = 379.0
offset_bottom = 189.0
color = Color(0, 0, 0, 1)

[node name="ImagePreview" type="Sprite2D" parent="UploadDialog"]
position = Vector2(315, 125)

[node name="Message" type="Label" parent="UploadDialog"]
layout_mode = 0
offset_top = 200.0
offset_right = 147.0
offset_bottom = 226.0
text = "Message goes here"

[node name="FileName" type="Label" parent="UploadDialog"]
layout_mode = 0
offset_left = 3.0
offset_top = 233.0
offset_right = 503.0
offset_bottom = 264.0
text = "this_is_the_filename.png"

[node name="FileSize" type="Label" parent="UploadDialog"]
layout_mode = 0
offset_left = 1.0
offset_top = 264.0
offset_right = 501.0
offset_bottom = 295.0
text = "1234567890 bytes"

[node name="CancelBtn" type="Button" parent="UploadDialog"]
layout_mode = 0
offset_left = 160.0
offset_top = 353.0
offset_right = 220.0
offset_bottom = 384.0
text = "Cancel	"

[node name="OkBtn" type="Button" parent="UploadDialog"]
layout_mode = 0
offset_left = 260.0
offset_top = 353.0
offset_right = 432.0
offset_bottom = 384.0
text = "Change Target Image"
